<resources>
    <string name="app_name">Aguas</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_formulario_reporte">formulario_reporte</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="boton_reportar">Reportar</string>
    <string name="title_activity_maps_activity2">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_contaminacion_agua">ContaminacionAgua</string>
    <string name="title_activity_deslaves">deslaves</string>
    <string name="title_activity_encharcamientos">Encharcamientos</string>
    <string name="title_activity_falta_agua">FaltaAgua</string>
    <string name="title_activity_fuga_agua">FugaAgua</string>
    <string name="title_activity_hundimientos">Hundimientos</string>
    <string name="title_activity_infraestructura">Infraestructura</string>
    <string name="title_activity_inundaciones">Inundaciones</string>
    <string name="title_activity_confirmation">Confirmation</string>
    <string name="title_activity_splash">splash</string>
    <string name="nombre_app">¡AGUAS!</string>
    <string name="title_activity_emergencias">Emergencias</string>


    <!--Telephones -->
    <string name="bomberos"><u>066</u></string>
    <string name="vialidad"><u>38192400</u></string>
    <string name="cfe"><u>071</u></string>
    <string name="semadet"><u>30308250</u></string>
    <string name="siapa"><u>073</u></string>
    <string name="cruzroja"><u>065</u></string>
    <string name="title_activity_informacion">Informacion</string>
    <string name="title_activity_recomendaciones">Recomendaciones</string>
    <string name="title_activity_glosario_terminos">GlosarioTerminos</string>
    <string name="title_activity_cuencas">Cuencas</string>
    <string name="title_activity_acerca">Acerca</string>

</resources>
